# grazel

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/razel-actions/: Cargo.toml
crates/razel-actions/src/: lib.rs
crates/razel-analysis/: Cargo.toml
crates/razel-analysis/src/: analysis.rs  lib.rs  producer.rs
crates/razel-build/: Cargo.toml
crates/razel-build/src/: incremental.rs  lib.rs
crates/razel-build/tests/: py_rules.rs  rust_rules.rs  sh_rules.rs
crates/razel-cc-toolchain/: Cargo.toml
crates/razel-cc-toolchain/fixtures/: cc_macos_core.bzl  cc_toolchain_config_lib.bzl
crates/razel-cc-toolchain/src/: derive.rs  lib.rs  rust.rs
crates/razel-cli/: Cargo.toml
crates/razel-cli/flags/: bazel-flags-9.1.1.json  extract_bazel_flags.py  gen_flags_table.py
crates/razel-cli/src/: bazel_flags.rs  main.rs
crates/razel-cli/tests/: cli.rs  cli_build.rs
crates/razel-conformance/: Cargo.toml
crates/razel-conformance/src/: lib.rs
crates/razel-core/: Cargo.toml
crates/razel-core/src/: lib.rs
crates/razel-daemon/: Cargo.toml
crates/razel-daemon/src/: lib.rs  rpc.rs  transport.rs
crates/razel-daemon/tests/: rpc_socket.rs
crates/razel-dds/: Cargo.toml
crates/razel-dds/src/: lib.rs
crates/razel-engine/: Cargo.toml
crates/razel-engine/src/: lib.rs
crates/razel-exec/: Cargo.toml
crates/razel-exec/src/: lib.rs  sandbox.rs
crates/razel-ir/: Cargo.toml
crates/razel-ir/src/: lib.rs
crates/razel-loading/: Cargo.toml
crates/razel-loading/host-repos/bazel_features/: BUILD  features.bzl
crates/razel-loading/host-repos/bazel_skylib/lib/: selects.bzl
crates/razel-loading/host-repos/bazel_tools/tools/build_defs/cc/: action_names.bzl
crates/razel-loading/host-repos/bazel_tools/tools/cpp/: BUILD  toolchain_utils.bzl
crates/razel-loading/host-repos/bazel_tools/tools/proto/: BUILD
crates/razel-loading/host-repos/cc_compatibility_proxy/: BUILD  proxy.bzl  symbols.bzl
crates/razel-loading/host-repos/compatibility_proxy/: BUILD  proxy.bzl
crates/razel-loading/host-repos/local_config_cuda/cuda/: BUILD  build_defs.bzl
crates/razel-loading/host-repos/local_config_remote_execution/: remote_execution.bzl
crates/razel-loading/host-repos/local_config_rocm/rocm/: build_defs.bzl
crates/razel-loading/host-repos/local_config_sycl/sycl/: BUILD  build_defs.bzl
crates/razel-loading/host-repos/local_config_tensorrt/: BUILD  build_defs.bzl
crates/razel-loading/host-repos/proto_bazel_features/: BUILD  features.bzl
crates/razel-loading/host-repos/python_version_repo/: py_version.bzl
crates/razel-loading/host-repos/rules_python/python/: BUILD
crates/razel-loading/host-repos/tf_wheel_version_suffix/: wheel_version_suffix.bzl
crates/razel-loading/src/: cc_defs.bzl  ctxv.rs  dds.rs  decls.rs  deps.rs  dialect.rs  engine.rs  genrule_cmd.rs  glob.rs  host.rs  java_defs.bzl  labels.rs  lib.rs  native_cc.rs  provider_values.rs  providers.rs  py_rules.rs  registry.rs  rules.rs  rust_rules.rs  selects.rs  sh_rules.rs  shims.rs  state.rs  toolchains.rs  values.rs
crates/razel-loading/tests/: actions_mnemonic.rs  args_fidelity.rs  attr_schema.rs  cc_defs_logic.rs  cc_info_provider.rs  characterization.rs  cross_package_providers.rs  external_repo.rs  forward_ref.rs  genrule.rs  graph_parity.rs  java_defs_logic.rs  java_graph_parity.rs  label_files.rs  parallel_parity.rs  provider_def.rs  provider_flow.rs  razel_build_command_line.rs  razel_cc_builtin.rs  select_config.rs
crates/razel-parity/: Cargo.toml
crates/razel-parity/src/: lib.rs
crates/razel-rulepack/: Cargo.toml
crates/razel-rulepack/src/: constrain.rs  lib.rs
crates/razel-vfs/: Cargo.toml
crates/razel-vfs/src/: lib.rs
crates/razel-wire/: Cargo.toml
crates/razel-wire/src/: cbor.rs  generated.rs  lib.rs  vectors.rs
crates/razel-wire/tests/: cbor_runtime.rs
crates/razel-wire/wire/: corpus.py  razel.taut.py
dev-docs/: ArchAnalRazel.md  ArchBazelConstraints.md  ArchFundamentals.md  ArchPatterns.md  ArchProposals.md  ArchitectSkillRules.md  BazelCcCommandLine.md  BzlToDdsValidation.md  CMakeImporterNote.md  DdsCoveringSet.md  DdsQuerySystem.md  DdsWorkedTransformation.md  GrazelForecast.md  GrazelProposal.md  RazelCcRules.md  RazelCodingRules.md  RazelDialect.md  RazelEvalParallelPlan.md  RazelGaps.md  RazelHookSeam.md  RazelMultiPackageWorkspaceProposal.md  RazelParityHarness.md  RazelStarlarkBoundaryPlan.md  RazelV2Checkpoint1Precis.md  RazelV2Contracts.md  RazelV2FinalArchProposal.md  RazelV2FinalArchProposalPlan.md  RazelV3Checkpoint2Precis.md  RazelV3Checkpoint3Precis.md  RazelV3Plan.md  ThoughtExp-CleanSlateBuildSurface.md  YIDLDigest.md  conformance-baseline.md  critique-arch-1.md  critique-arch-2.md  draft-arch-2.md
dev-docs/history/: ArchAnalBazel.md  ArchAnalPants.md  ArchModel.md  D5-spike-gate.md  README.md  RazelCcRules.md  RazelStarlarkBoundaryPlan.md  RazelStatus.md  RazelV2FinalArchProposalPlan.md  critique-arch-3.md  draft-arch-1.md  draft-arch-3.md
dev-docs/v3-prompts/: README.md  builder.md  reviewer.md  supervisor.md  ticket-template.md
parity/: MODULE.bazel
parity/corpus/cc/transitive/: BUILD  base.cc  base.h  golden.txt  meta.toml  util.cc  util.h
parity/corpus/java/transitive/: BUILD  Base.java  Util.java  golden.txt  meta.toml
parity/corpus/rust/transitive/: BUILD  base.rs  golden.txt  meta.toml  util.rs
scratch/: RazelHookSeam-Review48.md
xtask/: Cargo.toml
xtask/src/: main.rs  probe.rs  rungold.rs  tfload.rs
