[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# Project automation (the Rust idiom in place of Make/npm-scripts). Run via the
# `cargo xtask` alias (.cargo/config.toml). std-only; builds only when invoked.

[dependencies]
