[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# Project automation (the Rust idiom in place of Make/npm-scripts). Run via the
# `cargo xtask` alias (.cargo/config.toml). Builds only when invoked.

[dependencies]
razel-loading = { path = "../crates/razel-loading" } # the ladder probe drives the engine (probe)
razel-parity = { path = "../crates/razel-parity" } # shared golden normalization (capture-goldens)
