[package]
name = "razel-analysis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
razel-core = { version = "0.1.0", path = "../razel-core" }
razel-dds = { version = "0.1.0", path = "../razel-dds" }
razel-ir = { version = "0.1.0", path = "../razel-ir" }
razel-loading = { version = "0.1.0", path = "../razel-loading" }
