[package]
name = "razel-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
razel-actions = { version = "0.1.0", path = "../razel-actions" }
razel-analysis = { version = "0.1.0", path = "../razel-analysis" }
razel-core = { version = "0.1.0", path = "../razel-core" }
razel-exec = { version = "0.1.0", path = "../razel-exec" }
razel-ir = { version = "0.1.0", path = "../razel-ir" }
razel-loading = { version = "0.1.0", path = "../razel-loading" }

[dev-dependencies]
tempfile = "3.27.0"
