[package]
name = "razel-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# The `razel` command — a thin in-process consumer of the build driver that
# reports results as the razel-wire contract types. The daemon will serve those
# same types over UDS/CBOR; this proves the wire contract is the API surface.

[[bin]]
name = "razel"
path = "src/main.rs"

[dependencies]
razel-wire = { path = "../razel-wire" }
razel-build = { path = "../razel-build" }
razel-exec = { path = "../razel-exec" }
razel-core = { path = "../razel-core" }
razel-daemon = { path = "../razel-daemon" }

[dev-dependencies]
tempfile = "3"
