[package]
name = "razel-dds"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# L1 — the DDS spine (RazelV2Contracts §0/§1/§2/§3): razel's typed in-memory fact store, the
# thing the rule representation declares into. CI-ENFORCED dependency boundary (`xtask gates`):
# depends ONLY on razel-core (+ razel-wire) — never engine/adapter/rulepack/loading. Everything
# depends DOWN to the DDS; the DDS depends on nothing of razel's above L0.
[dependencies]
razel-core = { version = "0.1.0", path = "../razel-core" }
