[package]
name = "razel-loading"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
allocative = "0.3.6"
anyhow = "1.0.102"
razel-core = { version = "0.1.0", path = "../razel-core" }
razel-ir = { version = "0.1.0", path = "../razel-ir" }
starlark = "0.14.2"

# Test-only: prove razel's real analyzed cc data drives the §8c faithful argv end-to-end.
# (The reusable bridge belongs in razel-adapter-bazel — L4; this is the demonstration.)
[dev-dependencies]
razel-cc-toolchain = { version = "0.1.0", path = "../razel-cc-toolchain" }
razel-parity = { version = "0.1.0", path = "../razel-parity" }
